--- a/src/main/resources/assets/wurst/translations/ru_ru.json
+++ b/src/main/resources/assets/wurst/translations/ru_ru.json
@@ -111,7 +111,7 @@
   "description.wurst.hack.nofireoverlay": "Отключает видимость огня когда Вы горите.\n\n§c§lВНИМАНИЕ:§r Вы можете сгореть, не заметив этого.",
   "description.wurst.hack.nohurtcam": "Отключает тряску камеры когда Вам наносят урон.",
   "description.wurst.hack.nolevitation": "Отключает эффект левитации, когда Шалкер атакует вас.\n\n§c§lВНИМАНИЕ:§r Вы упадете, если активируете это, когда эффект левитации активен!",
-  "description.wurst.hack.nooverlay": "Отключает оверлей воды и лавы когда Вы внутри.",
+  "description.wurst.hack.nooverlay": "Отключает оверлей воды, лавы и рыхлого снега когда Вы внутри.",
   "description.wurst.hack.nopumpkin": "Отключает оверлей тыквы когда она у Вас на голове.",
   "description.wurst.hack.noslowdown": "Песок душ, мёд и использование чего-либо больше не будут вас замедлять.",
   "description.wurst.hack.noweather": "Позволяет устанавливать погоду, время дня и фазу луны. §rТолько на Вашей стороне, на сервере ничего не изменится.",
