--- a/src/main/resources/assets/wurst/translations/tr_tr.json
+++ b/src/main/resources/assets/wurst/translations/tr_tr.json
@@ -274,8 +274,8 @@
   "description.wurst.setting.generic.filter_villagers_vision": "Köylüleri ve gezgin tüccarları göstermez.",
   "description.wurst.setting.generic.filter_zombie_piglins_combat": "§lAçık§r olarak ayarlandığında, zombileşmiş piglinlere hiç saldırılmaz.\n\n§lSakinse§r olarak ayarlandığında, zombileşmiş piglinlere ancak onlar ilk saldırdığında saldırılır. Bu filtrenin, zombileşmiş piglinlerin size mi yoksa başka birine mi saldırdığını tespit edemeyeceğini unutmayın.\n\n§lKapalı§r olarak ayarlandığında, bu filtre hiçbir şey yapmaz ve zombileşmiş piglinlere saldırılabilir.",
   "description.wurst.setting.generic.filter_zombie_piglins_vision": "§lAçık§r olarak ayarlandığında, zombileşmiş piglinler hiç gösterilmez.\n\n§lSakinse§r olarak ayarlandığında, zombileşmiş piglinler bir şeye saldırana kadar gösterilmez.\n\n§lKapalı§r olarak ayarlandığında, bu filtre hiçbir şey yapmaz ve zombileşmiş piglinler gösterilebilir.",
-  "description.wurst.setting.generic.filter_zombie_villagers_combat": "Zombileşmiş köylülere saldırmaz.",
-  "description.wurst.setting.generic.filter_zombie_villagers_vision": "Zombileşmiş köylüleri göstermez.",
+  "description.wurst.setting.generic.filter_zombie_villagers_combat": "Zombi köylülere saldırmaz.",
+  "description.wurst.setting.generic.filter_zombie_villagers_vision": "Zombi köylüleri göstermez.",
   "description.wurst.setting.generic.pause_attack_on_containers": "Bir konteyner ekranı (sandık, hoperlor vb.) açıkken saldırı yapmaz.\nMini oyun sunucuları için faydalıdır, çünkü sandık benzeri menüler görüntüler.",
   "description.wurst.setting.generic.swing_hand_mining": "%s'nin madencilik yaparken elini nasıl sallaması gerektiği.",
   "description.wurst.setting.generic.swing_hand_combat": "%s'nin savaşırken elini nasıl sallaması gerektiği.",
