--- a/src/main/resources/assets/wurst/translations/ru_ru.json
+++ b/src/main/resources/assets/wurst/translations/ru_ru.json
@@ -25,7 +25,7 @@
   "description.wurst.setting.autoeat.allow_hunger": "Гнилая плоть накладывает эффект \"голод\".\nОна безопасна для употребления в пищу и полезна в качестве аварийного питания.",
   "description.wurst.setting.autoeat.allow_poison": "Ядовитая пища наносит урон с течением времени.\nНе рекомендуется.",
   "description.wurst.setting.autoeat.allow_chorus": "Съев плод хоруса, вы телепортируетесь в случайное место.\nНе рекомендуется.",
-  "description.wurst.hack.autofarm": "Автоматически собирает урожай и сажает семена.\nРаботает с пшеницей, морковкой, картошкой, свеклой, тыквами, арбузами, кактусами, тростником, водорослями, бамбуком, адским наростом, и какао-бобами.",
+  "description.wurst.hack.autofarm": "Автоматически собирает урожай и сажает семена.",
   "description.wurst.hack.autofish": "Автоматически ловит рыбу используя Вашу лучшую удочку. Если во время рыбалки найдётся удочка ещё лучше - бот переключится на неё.",
   "description.wurst.hack.automine": "Автоматически копает блоки на которые Вы смотрите.",
   "description.wurst.hack.autopotion": "Автоматически использует взрывные зелья лечения когда у Вас мало здоровья.",
