--- a/src/main/resources/assets/wurst/translations/de_de.json
+++ b/src/main/resources/assets/wurst/translations/de_de.json
@@ -28,7 +28,7 @@
   "description.wurst.setting.autoeat.allow_hunger": "Verrottetes Fleisch gibt dir einen harmlosen \"Hunger\"-Effekt.\nEs ist unbedenklich essbar und nützlich als Notfallnahrung.",
   "description.wurst.setting.autoeat.allow_poison": "Giftiges Essen fügt dir über einen Zeitraum hinweg Schaden zu.\nNicht empfohlen.",
   "description.wurst.setting.autoeat.allow_chorus": "Die Chorusfrucht zu essen teleportiert dich an einen zufälligen Ort.\nNicht empfohlen.",
-  "description.wurst.hack.autofarm": "Erntet und re-plantet Pflanzen automatisch.\nDas funktioniert mit Weizen, Karotten, Kartoffeln, Rote Beete, Kürbissen, Melonen, Kakteen, Zuckerrohr, Seetang, Bambus, Netherwarzen, und Kakaobohnen.",
+  "description.wurst.hack.autofarm": "Erntet und re-plantet Pflanzen automatisch.",
   "description.wurst.hack.autofish": "Angelt automatisch mit deiner besten Angel. Wenn es beim Angeln eine noch bessere Angel findet, wechselt es automatisch.",
   "description.wurst.hack.automine": "Baut automatisch den Block ab, den du gerade anguckst.",
   "description.wurst.hack.autopotion": "Benutzt automatisch Wurftränke der Heilung, wenn deine Gesundheit niedrig ist.",
