--- a/src/main/resources/assets/wurst/translations/it_it.json
+++ b/src/main/resources/assets/wurst/translations/it_it.json
@@ -25,7 +25,7 @@
   "description.wurst.setting.autoeat.allow_hunger": "La carne marcia applica un innocuo effetto di \"fame\".\nÈ sicuro da mangiare e utile come alimento di emergenza.",
   "description.wurst.setting.autoeat.allow_poison": "Il cibo velenoso provoca danni nel tempo.\nNon consigliato.",
   "description.wurst.setting.autoeat.allow_chorus": "Mangiare il frutto di chorus ti teletrasporta in una posizione casuale.\nNon consigliato.",
-  "description.wurst.hack.autofarm": "Raccoglie e ripianta i raccolti automaticamente.\nFunziona con grano, carote, patate, barbabietole, zucche, meloni, cactus, canne da zucchero, alghe, bambù, verruche inferiori e fave di cacao.",
+  "description.wurst.hack.autofarm": "Raccoglie e ripianta i raccolti automaticamente.",
   "description.wurst.hack.autofish": "Pesca automaticamente utilizzando la canna da pesca migliore. Se trova una migliore canna da pesca pescando, cambia automaticamente quella in uso con quella trovata.",
   "description.wurst.hack.automine": "Distrugge ogni blocco che guardi automaticamente.",
   "description.wurst.hack.autopotion": "Lancia una pozione di cura istantanea automaticamente quando la tua salute è bassa.",
