--- a/src/main/resources/assets/wurst/translations/ko_kr.json
+++ b/src/main/resources/assets/wurst/translations/ko_kr.json
@@ -22,7 +22,7 @@
   "description.wurst.setting.autoeat.injury_threshold": "작은 부상으로 인해 모든 음식이 낭비되는 것을 방지합니다. AutoEat은 최소한 만큼의 체력을 잃었을 때만 부상 상태로 간주합니다.",
   "description.wurst.setting.autoeat.eat_while_walking": "걷는 동안 음식을 먹는 것은 속도를 늦춥니다. 권장하지 않습니다.",
   "description.wurst.setting.autoeat.allow_poison": "독성 음식은 시간 경과에 따라 피해를 입힙니다.\n권장하지 않습니다.",
-  "description.wurst.hack.autofarm": "곡물, 당근, 감자, 비트, 호박, 수박, 선인장, 사탕수수, 켈프, 대나무, 네더 와트, 코코아 열매에 대해 자동으로 작물을 수확하고 다시 심습니다.",
+  "description.wurst.hack.autofarm": "자동으로 작물을 수확하고 다시 심습니다.",
   "description.wurst.hack.autofish": "최고의 낚싯대를 사용하여 자동으로 물고기를 잡습니다. 물고기를 잡는 동안 더 좋은 낚싯대를 발견하면 자동으로 전환됩니다.",
   "description.wurst.hack.automine": "시선을 정한 블록을 자동으로 채굴합니다.",
   "description.wurst.hack.autopotion": "체력이 낮을 때 즉시 회복 물약을 자동으로 던집니다.",
