--- a/src/main/resources/assets/wurst/translations/zh_cn.json
+++ b/src/main/resources/assets/wurst/translations/zh_cn.json
@@ -29,7 +29,7 @@
   "description.wurst.setting.autoeat.allow_hunger": "食用腐肉会带来一个无害的“饥饿“效果。\n将腐肉作为应急食物安全又有用。",
   "description.wurst.setting.autoeat.allow_poison": "食用有毒的食物会带来持续伤害。\n不推荐。",
   "description.wurst.setting.autoeat.allow_chorus": "食用紫颂果会将你随机传送。\n不推荐。",
-  "description.wurst.hack.autofarm": "自动种植与收获农作物。\n有效作物为小麦、胡萝卜、马铃薯、甜菜根、南瓜、西瓜、仙人掌、甘蔗、海带、竹子、地狱疣和可可豆。",
+  "description.wurst.hack.autofarm": "自动种植与收获农作物。",
   "description.wurst.hack.autofish": "当你在钓鱼的时切换到最好的鱼竿并自动钓鱼。",
   "description.wurst.hack.automine": "自动挖掘你准星所指的方块。",
   "description.wurst.hack.autopotion": "当你的生命值过低时，自动扔出一瓶喷溅型瞬间恢复药水。",
