--- a/src/main/resources/assets/wurst/translations/zh_hk.json
+++ b/src/main/resources/assets/wurst/translations/zh_hk.json
@@ -22,7 +22,7 @@
   "description.wurst.setting.autoeat.allow_hunger": "食腐肉時會有一個無害嘅 \"飢餓\" 效果。\n可安全食用，或作應急食品。",
   "description.wurst.setting.autoeat.allow_poison": "有毒嘅食物將會隨時間嘅推移造成傷害。\n唔推薦。",
   "description.wurst.setting.autoeat.allow_chorus": "（如果允許）食歌萊果將會傳送你到一個隨機嘅地點。\n唔推薦。",
-  "description.wurst.hack.autofarm": "自動收獲並種植農作物。\n有效作物為小麥、紅蘿蔔、薯仔、紅菜頭、南瓜、西瓜、仙人掌、蔗、海帶、竹、 地獄孢子同可可豆。",
+  "description.wurst.hack.autofarm": "自動收獲並種植農作物。",
   "description.wurst.hack.autofish": "自動釣魚同時使用你最好嘅魚竿，如果有更好嘅魚竿將會自動使用。",
   "description.wurst.hack.automine": "自動挖掘你眼前所指嘅方塊。",
   "description.wurst.hack.autopotion": "當你嘅生命值過低時，自動掟一樽噴濺型瞬間恢復。",
