--- a/src/main/resources/assets/wurst/translations/ru_ru.json
+++ b/src/main/resources/assets/wurst/translations/ru_ru.json
@@ -26,6 +26,7 @@
   "description.wurst.setting.autoeat.allow_poison": "Ядовитая пища наносит урон с течением времени.\nНе рекомендуется.",
   "description.wurst.setting.autoeat.allow_chorus": "Съев плод хоруса, вы телепортируетесь в случайное место.\nНе рекомендуется.",
   "description.wurst.hack.autofarm": "Автоматически собирает урожай и сажает семена.",
+  "description.wurst.setting.autofarm.swing_hand": "Как AutoFarm должен размахивать вашей рукой при посадке и сборе урожая.",
   "description.wurst.hack.autofish": "Автоматически ловит рыбу используя Вашу лучшую удочку. Если во время рыбалки найдётся удочка ещё лучше - бот переключится на неё.",
   "description.wurst.hack.automine": "Автоматически копает блоки на которые Вы смотрите.",
   "description.wurst.hack.autopotion": "Автоматически использует взрывные зелья лечения когда у Вас мало здоровья.",
