--- a/src/main/resources/assets/wurst/translations/uk_ua.json
+++ b/src/main/resources/assets/wurst/translations/uk_ua.json
@@ -24,6 +24,7 @@
   "description.wurst.setting.autoeat.allow_poison": "Отруйна їжа з часом завдає шкоди.\nНе рекомендується.",
   "description.wurst.setting.autoeat.allow_chorus": "З’їдаючи фрукти хору, ви телепортуєтеся у випадкове місце.\nНе рекомендується.",
   "description.wurst.hack.autofarm": "Автоматично збирає та садить урожай.",
+  "description.wurst.setting.autofarm.swing_hand": "Як AutoFarm повинен махати вашою рукою під час садіння та збору врожаю.",
   "description.wurst.hack.autofish": "Автоматично ловить рибу використовуючи вашу найкращу вудку. Якщо під час риболовлі знайдеться вудка ще краще – переключиться на неї.",
   "description.wurst.hack.automine": "Автоматично копає блоки на погляд.",
   "description.wurst.hack.autopotion": "Автоматично кидає вибухові зілля лікування, коли у вас мало здоров'я.",
