--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -10,7 +10,7 @@
   "description.wurst.hack.anchoraura": "Automatically places (optional), charges, and detonates respawn anchors to kill entities around you.",
   "description.wurst.setting.anchoraura.range": "Determines how far AnchorAura will reach to place, charge and detonate anchors.",
   "description.wurst.setting.anchoraura.auto-place_anchors": "When enabled, AnchorAura will automatically place anchors near valid entities.\nWhen disabled, AnchorAura will only charge and detonate manually placed anchors.",
-  "description.wurst.setting.anchoraura.face_anchors": "Whether or not AnchorAura should face the correct direction when placing and right-clicking respawn anchors.\n\nSlower but can help with anti-cheat plugins.",
+  "description.wurst.setting.anchoraura.face_target": "How AnchorAura should face the respawn anchors",
   "description.wurst.setting.anchoraura.check_line_of_sight": "Ensures that you don't reach through blocks when placing or right-clicking respawn anchors.\n\nSlower but can help with anti-cheat plugins.",
   "description.wurst.setting.anchoraura.swing_hand": "How AnchorAura should swing your hand when placing, charging and detonating respawn anchors.",
   "description.wurst.setting.anchoraura.take_items_from": "Where to look for respawn anchors and glowstone.",
@@ -38,6 +38,7 @@
   "description.wurst.hack.autodrop": "Automatically drops unwanted items.",
   "description.wurst.hack.autoleave": "Automatically leaves the server when your health is low.",
   "description.wurst.hack.autolibrarian": "Automatically trains a villager to become a librarian that sells a specific enchanted book. You can set up an entire trading hall in no time by using this hack.",
+  "description.wurst.setting.autolibrarian.face_target": "How AutoLibrarian should face the villager and job site.",
   "description.wurst.setting.autolibrarian.swing_hand": "How AutoLibrarian should swing your hand when interacting with the villager and job site.",
   "description.wurst.hack.autoeat": "Automatically eats food when necessary.",
   "description.wurst.setting.autoeat.target_hunger": "Tries to keep the hunger bar at or above this level, but only if it doesn't waste any hunger points.",
@@ -73,6 +74,7 @@
   "description.wurst.hack.bonemealaura": "Automatically uses bone meal on specific types of plants.\nUse the checkboxes to specify the types of plants.",
   "description.wurst.hack.bowaimbot": "Automatically aims your bow or crossbow.",
   "description.wurst.hack.buildrandom": "Randomly places blocks around you.",
+  "description.wurst.setting.buildrandom.face_target": "How BuildRandom should face the randomly placed blocks.",
   "description.wurst.setting.buildrandom.swing_hand": "How BuildRandom should swing your hand when placing blocks.",
   "description.wurst.hack.bunnyhop": "Makes you jump automatically.",
   "description.wurst.hack.cameradistance": "Allows you to change the camera distance in 3rd person.",
@@ -91,6 +93,7 @@
   "description.wurst.hack.creativeflight": "Allows you to fly like in Creative Mode.\n\n§c§lWARNING:§r You will take fall damage if you don't use NoFall.",
   "description.wurst.hack.criticals": "Changes all your hits to critical hits.",
   "description.wurst.hack.crystalaura": "Automatically places (optional) and detonates end crystals to kill entities around you.",
+  "description.wurst.setting.crystalaura.face_target": "How CrystalAura should face the end crystals.",
   "description.wurst.setting.crystalaura.swing_hand": "How CrystalAura should swing your hand when placing and detonating end crystals.",
   "description.wurst.hack.derp": "Randomly moves your head around.\nOnly visible to other players.",
   "description.wurst.hack.dolphin": "Makes you bob up in water automatically.\n(just like a dolphin)",
@@ -232,6 +235,7 @@
   "description.wurst.hack.tp-aura": "Automatically attacks the closest valid entity while teleporting around it.",
   "description.wurst.hack.trajectories": "Predicts the flight path of arrows and throwable items.",
   "description.wurst.hack.treebot": "An experimental bot that automatically walks around and chops down trees.\nLimited to small trees for now.",
+  "description.wurst.setting.treebot.face_target": "How TreeBot should face the logs and leaves when breaking them.",
   "description.wurst.setting.treebot.swing_hand": "How TreeBot should swing your hand when breaking logs and leaves.",
   "description.wurst.hack.triggerbot": "Automatically attacks the entity you're looking at.",
   "description.wurst.setting.triggerbot.swing_hand": "How TriggerBot should swing your hand when attacking. (This setting will be ignored if \"Simulate mouse click\" is enabled.)",
@@ -244,6 +248,10 @@
   "button.wurst.nochatreports.disable_signatures": "Disable Signatures",
   "button.wurst.nochatreports.re-enable_signatures": "Re-enable Signatures",
   "description.wurst.setting.generic.attack_speed": "Attack speed in clicks per second.\n0 = dynamically adjusts the speed to match your attack cooldown.",
+  "description.wurst.setting.generic.face_target.off": "Don't face the target at all. Will be detected by anti-cheat plugins.",
+  "description.wurst.setting.generic.face_target.server": "Face the target on the server-side, while still letting you move the camera freely on the client-side.",
+  "description.wurst.setting.generic.face_target.client": "Face the target by moving your camera on the client-side. This is the most legit option, but can be disorienting to look at.",
+  "description.wurst.setting.generic.face_target.spam": "Face the target on the server-side and send a separate packet every time. Can help with some (broken) anti-cheat plugins but is more likely to just get you kicked.",
   "description.wurst.setting.generic.filter_allays_combat": "Won't attack allays.",
   "description.wurst.setting.generic.filter_allays_vision": "Won't show allays.",
   "description.wurst.setting.generic.filter_armor_stands_combat": "Won't attack armor stands.",
